# pico-cpp-minimum-example

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json
common/: CMakeLists.txt
common/include/: CMakeLists.txt  hello.h  i2c.h  main_device.h  sub.h
common/src/: CMakeLists.txt
common/src/spi/: CMakeLists.txt  spi.cpp  spi.hpp
common/test/: CMakeLists.txt
common/test/test_common_include/: CMakeLists.txt  test_hello.cpp
src/: CMakeLists.txt  main.cpp
